# darce.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  about.html  apple.html  barbarabeirne.html  bauhausdances.html  index.html  msnbc.html  package-lock.json  package.json  photoshelter.html  research.html  resume.html  vitest.config.ts
.github/workflows/: deploy-api.yml  deploy-frontend.yml
components/common/: ErrorBoundary.tsx
content/about/: about.mdx
content/projects/: apple.mdx  barbarabeirne.mdx  msnbc.mdx  photoshelter.mdx  workstate.mdx
content/research/: order-book.mdx  orderbook.mdx  rotation-matrices.mdx
content/resume/: daniel_arce_resume_2026.txt
contexts/: BreadcrumbContext.tsx  HeaderContext.tsx  ThemeContext.tsx
darce.github.io--next-js-pages-router/: .env.example  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
hooks/: useSectionNavigation.ts
lib/: getMdxContent.ts  markdownUtils.ts  schemas.ts  useSwipeNav.ts
lib/telemetry/: altcontext.ts  (+1 more)
orderbook-api/: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
orderbook-api/api/: orderbook.py
pages/: 404.tsx  _app.tsx  about.tsx  index.tsx  privacy.tsx  resume.tsx  work.tsx
public/: llms-full.txt  llms.txt  sitemap.xml
scripts/: dither-headshot.js  generate-llm-content.js  generate-sitemap.js  inspect-dom.mjs
styles/: aboutPage.module.scss  animations.module.scss  global.scss  landingPage.module.scss  layout.scss  mixins.scss  motion.scss  palettes.scss  resumePage.module.scss  spacing.scss  vars.scss
types/: index.ts
(+147 files in other folders)
