[project]
name = "orderbook-api"
version = "0.1.0"
description = "Serverless Python API for fetching cryptocurrency order book data from CoinAPI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
